# Car-like_Robot

./: README.md
steer_bot_description/launch/: description.launch
steer_bot_description/urdf/: camera.gazebo  camera.xacro  gaze_hokuyo.gazebo  hokuyo.xacro  steer_bot.urdf.xacro  wheel.xacro
steer_bot_gazebo/: CMakeLists.txt  package.xml
steer_bot_gazebo/launch/: steer_bot_sim.launch
steer_bot_gazebo/maps/: hospital_map_final.pgm  hospital_map_final.yaml  map_best.pgm  map_best.yaml  map_final.pgm  map_final.yaml  map_service.pgm  map_service.yaml  map_sv.pgm  map_sv.yaml  new.yaml
steer_bot_gazebo/param/: global_costmap_params.yaml  global_planner_params.yaml  local_costmap_params.yaml  teb_costmap_common_params.yaml  teb_local_planner_params.yaml
steer_bot_gazebo/src/: tf_map_to_odom.cpp
steer_bot_gazebo/steer_navigation/: amcl.launch  amcl_new.launch  dwa_local_planner.launch  move_base.launch  teb_amcl.launch  teb_local_planner.launch  teb_move_base.launch  teb_nav.launch
steer_bot_gazebo/steer_slam/: gmapping.launch  gmapping_demo.launch  move_base_new.launch  steer_gmapping.launch  steer_hector.launch
steer_bot_gazebo/steer_teleop_key/: teleop_key.py
steer_bot_gazebo/worlds/: hospital.world  hospital_final.world  service_map.world
steer_bot_viz/: final.rviz  final_viz.rviz  new.rviz  steer_bot_r1.rviz  steer_bot_robot.rviz  steer_bot_test1.rviz  test1.rviz
steer_bot_viz/launch/: view_steer_bot_robot.launch
